--- a/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BiStatApp.Views.SessionDetailPage">
     <ContentPage.Content>
-        <TableView Intent="Data" Margin="16,0">
+        <TableView Intent="Form" Margin="16">
             <TableRoot>
                 <TableSection>
                     <EntryCell Label="Name" Text="{Binding Path=Session.Name}" />
@@ -14,6 +14,25 @@
                         <DatePicker VerticalOptions="CenterAndExpand" Date="{Binding Path=Session.DateTime}">
                             <DatePicker.Format>dd-MMM-yy</DatePicker.Format>
                         </DatePicker>
+                    </ViewCell>
+                </TableSection>
+                <TableSection Title="Shooting Bouts">
+                    <ViewCell>
+                        <ListView ItemsSource="{Binding Path=Session.Bouts}"
+                                HasUnevenRows="True"
+                                SeparatorColor="Gray"
+                                HeightRequest="100">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <StackLayout Orientation="Horizontal" Padding="10">
+                                            <Label Text="{Binding Position}" FontSize="Micro" Style="{DynamicResource ListItemTextStyle}"/>
+                                            <Label Text="{Binding Misses}" FontSize="Micro" Style="{DynamicResource ListItemTextStyle}"/>
+                                        </StackLayout>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
                     </ViewCell>
                 </TableSection>
                 <TableSection>
