--- a/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Name="sessionDetailPage"
              x:Class="BiStatApp.Views.SessionDetailPage">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Command="{Binding AddShootingBoutCommand}" />
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
         <TableView Intent="Form" Margin="16">
             <TableRoot>
@@ -18,10 +24,9 @@
                 </TableSection>
                 <TableSection Title="Shooting Bouts">
                     <ViewCell>
-                        <ListView ItemsSource="{Binding Path=Session.Bouts}"
-                                HasUnevenRows="True"
-                                SeparatorColor="Gray"
-                                HeightRequest="100">
+                        <ListView ItemsSource="{Binding Path=Session.Bouts}" SelectedItem="{Binding SelectedBout, Mode=TwoWay}"
+                                  HasUnevenRows="True" SeparatorColor="Gray" HeightRequest="100"
+                                  ItemSelected="OnBoutSelected">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
