--- a/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
@@ -15,34 +15,39 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            
-                <TableView Intent="Form" Margin="16">
-                    <TableRoot>
-                        <TableSection>
-                            <EntryCell Label="Name" Text="{Binding Path=Session.Name}" />
-                            <EntryCell Label="Description" Text="{Binding Path=Session.Description}" />
-                        </TableSection>
-                        <TableSection>
-                            <ViewCell>
-                                <DatePicker VerticalOptions="CenterAndExpand" Date="{Binding Path=Session.DateTime}">
-                                    <DatePicker.Format>dd-MMM-yy</DatePicker.Format>
-                                </DatePicker>
-                            </ViewCell>
-                        </TableSection>
-                    </TableRoot>
-                </TableView>
+
+            <TableView Intent="Form" Margin="16">
+                <TableRoot>
+                    <TableSection>
+                        <EntryCell Label="Name" Text="{Binding Path=Session.Name}" />
+                        <EntryCell Label="Description" Text="{Binding Path=Session.Description}" />
+                    </TableSection>
+                    <TableSection>
+                        <ViewCell>
+                            <DatePicker VerticalOptions="CenterAndExpand" Date="{Binding Path=Session.DateTime}">
+                                <DatePicker.Format>dd-MMM-yy</DatePicker.Format>
+                            </DatePicker>
+                        </ViewCell>
+                    </TableSection>
+                </TableRoot>
+            </TableView>
 
             <ListView ItemsSource="{Binding Path=ShootingBouts}" 
-                      SelectedItem="{Binding SelectedBout, Mode=TwoWay}"
+                      SelectedItem="{Binding SelectedShootingBout, Mode=TwoWay}"
                       HasUnevenRows="True" 
                       ItemSelected="OnBoutSelected"
                       Grid.Row="1">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="10">
-                                <Image Source="{Binding TargetImage}" HeightRequest="60"/>
-                            </StackLayout>
+                            <ViewCell.View>
+                                <StackLayout Orientation="Horizontal" Padding="10">
+                                    <Image Source="{Binding TargetImage}" HeightRequest="30"/>
+                                </StackLayout>
+                            </ViewCell.View>
+                            <ViewCell.ContextActions>
+                                <MenuItem Text="Delete" IsDestructive="true" Command="{Binding Source={x:Reference sessionDetailPage}, Path=ViewModel.DeleteShootingBoutCommand}" CommandParameter="{Binding .}" />
+                            </ViewCell.ContextActions>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
