--- a/BiStatApp/BiStatApp/Views/SessionsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionsPage.xaml
@@ -26,7 +26,7 @@
                                     <Label Text="{Binding HitPercentage, StringFormat='Hits: {0:P2}'}"
                                            Style="{DynamicResource ListItemDetailTextStyle}"
                                            FontSize="Micro"
-                                           HorizontalOptions="Center"/>
+                                           HorizontalOptions="CenterAndExpand"/>
                                     <Label Text="{Binding DateTime, StringFormat='{0: dd MMM yy}'}" 
                                            FontSize="Micro" 
                                            HorizontalOptions="EndAndExpand"/>
