--- a/BiStatApp/BiStatApp/Views/SessionsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionsPage.xaml
@@ -16,7 +16,8 @@
             </Grid.RowDefinitions>
             <ListView ItemsSource="{Binding Sessions}" SelectedItem="{Binding SelectedSession, Mode=TwoWay}" 
                   HasUnevenRows="True" SeparatorColor="Gray" ItemSelected="OnSessionSelected"
-                  SeparatorVisibility="Default">
+                  SeparatorVisibility="Default"
+                      VerticalScrollBarVisibility="Default">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -24,21 +25,23 @@
                                 <StackLayout Orientation="Vertical" Padding="10">
                                     <StackLayout Orientation="Horizontal">
                                         <Label Text="{Binding Name}" 
-                                           FontSize="Micro" 
+                                           FontSize="Body"
                                            FontAttributes="Bold"
                                            HorizontalOptions="StartAndExpand"
                                            Style="{DynamicResource ListItemTextStyle}"/>
-                                        <Label Text="{Binding HitPercentage, StringFormat='Hits: {0:P2}'}"
-                                           Style="{DynamicResource ListItemDetailTextStyle}"
-                                           FontSize="Micro"
-                                           HorizontalOptions="CenterAndExpand"/>
-                                        <Label Text="{Binding DateTime, StringFormat='{0: dd MMM yy}'}" 
-                                           FontSize="Micro" 
+                                        <Label Text="{Binding HitPercentage, StringFormat='{0:P2}'}"
+                                           Style="{DynamicResource ListItemTextStyle}"
+                                           FontSize="Body"
+                                           FontAttributes="Bold"
                                            HorizontalOptions="EndAndExpand"/>
                                     </StackLayout>
-                                    <StackLayout Orientation="Horizontal">
+                                    <StackLayout Orientation="Vertical">
+                                        <Label Text="{Binding DateTime, StringFormat='{0: dd MMM yy}'}" 
+                                           Style="{DynamicResource ListItemDetailTextStyle}"
+                                           FontSize="Small"/>
                                         <Label Text="{Binding Description}" 
                                            Style="{DynamicResource ListItemDetailTextStyle}"
+                                           TextColor="DarkGray"
                                            FontSize="Micro"/>
                                     </StackLayout>
                                 </StackLayout>
