Added new target images.  Write a session to a JSON file.  Later, users will be able to the send this file.

--- a/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
@@ -5,6 +5,7 @@
              x:Class="BiStatApp.Views.SessionDetailPage">
 
     <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Send" Command="{Binding SendCommand}"/>
         <ToolbarItem Text="Add" Command="{Binding AddShootingBoutCommand}" />
     </ContentPage.ToolbarItems>
 
