--- a/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SessionDetailPage.xaml
@@ -19,9 +19,8 @@
 
             <TableView Intent="Form" Margin="16">
                 <TableRoot>
-                    <TableSection>
-                        <EntryCell Label="Name" Text="{Binding Path=Session.Name}" />
-                        <EntryCell Label="Description" Text="{Binding Path=Session.Description}" />
+                    <TableSection Title="{Binding Path=Session.Name}" >
+                    <EntryCell Label="Description" Text="{Binding Path=Session.Description}" />
                     </TableSection>
                     <TableSection>
                         <ViewCell>
