Initial development of the Settings Page.  Added Static Resource items.

--- a/BiStatApp/BiStatApp/Views/MainPageMaster.xaml
+++ b/BiStatApp/BiStatApp/Views/MainPageMaster.xaml
@@ -20,7 +20,7 @@
                   ItemsSource="{Binding MenuItems}"
                   x:FieldModifier="public">
             <ListView.Header>
-                <Grid BackgroundColor="#03A9F4">
+                <Grid BackgroundColor="{StaticResource PrimaryDark}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="10"/>
                         <ColumnDefinition Width="*"/>
