--- a/BiStatApp/BiStatApp/Views/ReportPage.xaml
+++ b/BiStatApp/BiStatApp/Views/ReportPage.xaml
@@ -4,50 +4,72 @@
              x:Class="BiStatApp.Views.ReportPage"
              Title="Report">
     <ContentPage.Content>
-        <Grid Padding="10">
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="160"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="1" />
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="1" />
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="1" />
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="1" />
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
-            <Label Text="Shots" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="1" Grid.Row="0" />
+
+            <BoxView Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" BackgroundColor="{StaticResource DarkBackgroundColor}" HeightRequest="1" VerticalOptions="End" HorizontalOptions="FillAndExpand"/>
+            <BoxView Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" BackgroundColor="{StaticResource DarkBackgroundColor}" HeightRequest="1" VerticalOptions="End" HorizontalOptions="FillAndExpand"/>
+            <BoxView Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="3" BackgroundColor="{StaticResource DarkBackgroundColor}" HeightRequest="1" VerticalOptions="End" HorizontalOptions="FillAndExpand"/>
+            <BoxView Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="3" BackgroundColor="{StaticResource DarkBackgroundColor}" HeightRequest="1" VerticalOptions="End" HorizontalOptions="FillAndExpand"/>
+
+            <Label Text="" Grid.Column="0" Grid.Row="0" />
+            <Label Text="Shots" 
+                   Style="{DynamicResource ListItemDetailTextStyle}" 
+                   Grid.Column="1" Grid.Row="0" 
+                   BackgroundColor="{StaticResource LightBackgroundColor}" />
             <Label Text="Average" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="2" Grid.Row="0" />
-            <Label Text="Prone" Style="{DynamicResource ListItemDetailTextStyle}"  Grid.Column="0" Grid.Row="1" />
-            <Label Text="Standing" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="0" Grid.Row="2" />
-            <Label Text="Overall" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="0" Grid.Row="3" />
-            <Label Text="Sessions Count" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="0" Grid.Row="5"/>
+
+            <Label Text="Prone" Style="{DynamicResource ListItemDetailTextStyle}"  Grid.Column="0" Grid.Row="2" Padding="25,0,0,0"/>
+            
+            <Label Text="Standing" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="0" Grid.Row="4" Padding="25,0,0,0"/>
+            
+            <Label Text="Overall" Style="{DynamicResource ListItemDetailTextStyle}" Grid.Column="0" Grid.Row="6" Padding="25,0,0,0"/>
+            
+            <Label Text="Sessions Count" 
+                   Style="{DynamicResource ListItemDetailTextStyle}" 
+                   Grid.Column="0" Grid.Row="9" 
+                   Padding="25,0,0,0"/>
 
             <Label Text="{Binding ProneShots}"
-                Style="{DynamicResource ListItemTextStyle }" TextColor="Black"
-                Grid.Column="1" Grid.Row="1"/>
-            <Label Text="{Binding StandingShots}" TextColor="Black"
-                Style="{DynamicResource ListItemTextStyle }"
+                Style="{DynamicResource ListItemTextStyle }" TextColor="Black" 
                 Grid.Column="1" Grid.Row="2"/>
-            <Label Text="{Binding TotalShots}" TextColor="Black"
+            <Label Text="{Binding StandingShots}" TextColor="Black" 
                 Style="{DynamicResource ListItemTextStyle }"
-                Grid.Column="1" Grid.Row="3"/>
+                Grid.Column="1" Grid.Row="4"/>
+            <Label Text="{Binding TotalShots}" TextColor="Black" 
+                Style="{DynamicResource ListItemTextStyle }"
+                Grid.Column="1" Grid.Row="6"/>
 
-            <Label Text="{Binding ProneAverage, StringFormat='{0:P2}'}" TextColor="Black"
+            <Label Text="{Binding ProneAverage, StringFormat='{0:P2}'}" TextColor="Black" 
                 Style="{DynamicResource ListItemTextStyle }"
                 Grid.Column="2" Grid.Row="2"/>
             <Label Text="{Binding StandingAverage, StringFormat='{0:P2}'}" TextColor="Black"
                 Style="{DynamicResource ListItemTextStyle }"
-               Grid.Column="2" Grid.Row="1"/>
+               Grid.Column="2" Grid.Row="4"/>
             <Label Text="{Binding OverallAverage, StringFormat='{0:P2}'}" TextColor="Black"
                 Style="{DynamicResource ListItemTextStyle }"
-                Grid.Column="2" Grid.Row="3"/>
+                Grid.Column="2" Grid.Row="6"/>
 
             <Label Text="{Binding Sessions.Count}" TextColor="Black"
                 Style="{DynamicResource ListItemTextStyle }"
-                Grid.Column="1" Grid.Row="5"/>
+                Grid.Column="1" Grid.Row="9" Grid.ColumnSpan="2"/>
+
         </Grid>
     </ContentPage.Content>
 </ContentPage>
