--- a/BiStatApp/BiStatApp/Views/SettingsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SettingsPage.xaml
@@ -8,7 +8,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
+            <StackLayout BackgroundColor="{StaticResource PrimaryDark}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
                 <StackLayout Orientation="Vertical" HorizontalOptions="Center" VerticalOptions="Center">
                     <!--<ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
                         <Image Source="{Binding BannerImage}" VerticalOptions="Center" HeightRequest="64" />
