Removed hard coding for version number from Settings page.  Call View Model for the app version.

--- a/BiStatApp/BiStatApp/Views/SettingsPage.xaml
+++ b/BiStatApp/BiStatApp/Views/SettingsPage.xaml
@@ -32,7 +32,7 @@
                             <FormattedString.Spans>
                                 <Span Text="Version"/>
                                 <Span Text=": " />
-                                <Span Text="0.1.0.0-alpha" ForegroundColor="{StaticResource LightTextColor}" />
+                                <Span Text="{Binding CurrentVersion}" ForegroundColor="{StaticResource LightTextColor}" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
